# understatAPI

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .mypy.ini  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  README.html  README.md  api_index.html  docs_requirements.in  docs_requirements.txt  endpoints_index.html  genindex.html  glossary.html  index.html  make_docs.sh  misc_index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.in  requirements.txt  run_tests.sh  search.html  searchindex.js  services_index.html  setup.cfg  setup.py  test_requirements.in  test_requirements.txt  understatapi.api.html  understatapi.endpoints.base.html  understatapi.endpoints.html  understatapi.endpoints.league.html  understatapi.endpoints.match.html  understatapi.endpoints.player.html  (+13 more)
.circleci/: config.yml
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yml  publish.yml
_modules/: index.html
_modules/selenium/webdriver/firefox/: options.html
_modules/understatapi/: api.html  exceptions.html  utils.html
_modules/understatapi/endpoints/: base.html  league.html  match.html  player.html  team.html
_modules/understatapi/parsers/: base.html  league.html  match.html  player.html  team.html
_modules/understatapi/services/: search.html
_sources/: README.md.txt  index.rst.txt  misc_index.rst.txt  modules.rst.txt  understatapi.endpoints.base.rst.txt  understatapi.endpoints.league.rst.txt  understatapi.endpoints.match.rst.txt  understatapi.endpoints.player.rst.txt  understatapi.endpoints.rst.txt  understatapi.endpoints.team.rst.txt  understatapi.parsers.base.rst.txt  understatapi.parsers.league.rst.txt  understatapi.parsers.match.rst.txt  understatapi.parsers.player.rst.txt  understatapi.parsers.rst.txt  understatapi.parsers.team.rst.txt  understatapi.rst.txt  understatapi.services.rst.txt  understatapi.services.search.rst.txt  understatapi.utils.rst.txt
_static/: documentation_options.js
cd/: deploy_docs.sh  deploy_package.sh  make_release.sh
ci/: install_dependencies.sh  make_docs.sh  run_tests.sh
docs/: Makefile  conf.py  index.rst  make_docs.sh  requirements.in  requirements.txt
docs/source/: README.md  api_index.rst  conf.py  endpoints_index.rst  glossary.rst  index.rst  services_index.rst  usage.md
doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  understatapi.api.doctree  understatapi.doctree  understatapi.endpoints.base.doctree  understatapi.endpoints.doctree  understatapi.endpoints.league.doctree  understatapi.endpoints.match.doctree  understatapi.endpoints.player.doctree  understatapi.endpoints.team.doctree  understatapi.exceptions.doctree
html/: .buildinfo  README.html  genindex.html  modules.html  objects.inv  searchindex.js  understatapi.api.html  understatapi.endpoints.base.html  understatapi.endpoints.html  understatapi.endpoints.league.html  understatapi.endpoints.match.html  understatapi.endpoints.player.html  understatapi.endpoints.team.html  understatapi.exceptions.html  understatapi.html
html/_sources/: README.md.txt  modules.rst.txt  understatapi.api.rst.txt  understatapi.exceptions.rst.txt
test/: __init__.py  mock_requests.py  mock_selenium.py  test_api.py  test_api_json.py  test_base.py  test_exceptions.py  test_integration.py  test_league.py  test_local_session.py  test_match.py  test_player.py  test_search.py  test_team.py  test_utils.py  utils.py
test/resources/: home.html  league_epl.html  league_epl_datesdata.csv  league_epl_playersdata.csv  league_epl_teamsdata.csv  match.html  minimal.html  player.html  team.html
test/resources/data/: league_ajax.json  league_datesdata.json  league_playersdata.json  league_teamsdata.json  match_ajax.json  match_matchinfo.csv  match_matchinfo.json  match_promotiondata.csv  match_rostersdata.csv  match_rostersdata.json  match_shotsdata.csv  match_shotsdata.json  player_ajax.json  player_groupsdata.csv  player_groupsdata.json  player_matchesdata.csv  player_matchesdata.json  player_shotsdata.csv  player_shotsdata.json  team_ajax.json  team_datesdata.csv  team_datesdata.json  team_datessdata.csv  team_playersdata.csv  team_playersdata.json  team_statisticsdata.json
understatapi/: __init__.py  api.py  exceptions.py  session.py  utils.py
understatapi/endpoints/: __init__.py  base.py  league.py  match.py  player.py  team.py
understatapi/parsers/: __init__.py  base.py  league.py  match.py  player.py  team.py
understatapi/services/: __init__.py  search.py
