[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "understatapi"
version = "0.6.1"
description = "An API for scraping data from understat.com"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "collinb9", email = "brendan.m.collins@outlook.com"}
]
maintainers = [
    {name = "collinb9", email = "brendan.m.collins@outlook.com"}
]
keywords = [
    "statistics",
    "xG",
    "expected",
    "goals",
    "fpl",
    "fantasy",
    "premier",
    "league",
    "understat",
    "football",
    "web",
    "scraping",
    "scraper"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "requests>=2.32.0",
    "urllib3>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "types-requests>=2.32.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/collinb9/understatAPI"
Documentation = "https://collinb9.github.io/understatAPI/"
Repository = "https://github.com/collinb9/understatAPI"
"Bug Tracker" = "https://github.com/collinb9/understatAPI/issues"
Download = "https://pypi.org/project/understatapi/#files"

[tool.setuptools]
packages = ["understatapi", "understatapi.endpoints", "understatapi.parsers"]

[tool.setuptools.package-data]
understatapi = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | docs
)/
'''

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=understatapi --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pylint.main]
py-version = "3.8"
ignore = ["tests", "docs", "build", "dist"]
jobs = 0

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
