[metadata]
name = understatapi
version = attr: understatapi.__version__
description = An API for scraping data from understat.com,
long_description = file: README.md
long_description_content_type = text/markdown
author = collinb9
author_email = brendan.m.collins@outlook.com
url = https://github.com/collinb9/understatAPI
project_urls =
    Documentation = https://collinb9.github.io/understatAPI/
    Source = https://github.com/collinb9/understatAPI
    Download = https://pypi.org/project/understatapi/#files
license_files = LICENSE.txt
keywords =
    statistics
    xG
    expected
    goals
    fpl
    fantasy
    premier
    league
    understat
    football
    web
    scraping
    scraper

[options]
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
exclude =
    test*
    docs*
