[metadata]
name = jeke-understat-scrapper
version = attr: understatapi.__version__
description = A Python API for scraping football data from understat.com
long_description = file: README.md
long_description_content_type = text/markdown
author = jeke-deportivas
author_email = info@jekedeportivas.com
url = https://github.com/jeke-deportivas/jeke-understat-scrapper
project_urls =
    Source = https://github.com/jeke-deportivas/jeke-understat-scrapper
    Download = https://pypi.org/project/jeke-understat-scrapper/#files
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    statistics
    xG
    expected
    goals
    fpl
    fantasy
    premier
    league
    understat
    football
    web
    scraping
    scraper

[options]
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
exclude =
    test*
    docs*
